Before reaming XFs

--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -79,7 +79,7 @@ These contributions are tested and evaluated using two different NLP semantic ta
 
 \subsection{Modeling linguistic features}
 \paragraph{Challenge}
-Representing unstructured text within a model that describes textual units and their corresponding features is a critical step within a NLP process. Textual units -- either words, sentences, paragraphs, documents, etc -- need to be represented by some kind of model that will allow for numerical analyses to be applied. Usually, textual units are represented in a vectorial space, where each dimension represents a feature; or in a graph-like structure, where features link units together. Concerning the features themselves, their selection is often an empirical process determined  by the final goal of the NLP process at hand. Nonetheless,  we have access to several types of linguistic features, each one representing the text from different points of view.  Furthermore, texts usually containing large vocabularies involves the need of an efficient way of storing a corpus and its features. These possibilities entail the following research questions: \textbf{what type of model can we employ to represent a corpus through a set of heterogeneous features, extracted from itself, while keeping record of the relationships between textual units?} \textbf{How can we organize and store this model as simply and efficiently possible?} Answering these questions would allow us to  properly design and build a linguistic resource containing heterogeneous descriptions of the textual units\footnote{In this work we focus on words. As such, the rest of this dissertation deals with the representation of words.} adapted to solve NLP tasks.
+Representing unstructured text within a model that describes textual units and their corresponding features is a critical step within a NLP process. Textual units -- either words, sentences, paragraphs, documents, etc -- need to be represented by some kind of model that will allow for numerical analyses to be applied. Usually, textual units are represented in a vectorial space, where each dimension represents a feature; or in a graph-like structure, where features link units together. Concerning the features themselves, their selection is often an empirical process determined  by the final goal of the NLP process at hand. Nonetheless,  we have access to several types of linguistic features, each one representing the text from different points of view.  Furthermore, texts usually containing large vocabularies involves the need of an efficient way of storing a corpus and its features. These possibilities entail the following research questions: \textbf{what type of model can we employ to represent a corpus through a set of heterogeneous features, extracted from itself, while keeping record of the relationships between textual units?} \textbf{How can we organize and store this model as simply and efficiently possible?} Answering these questions would allow us to  properly design and build a linguistic resource containing heterogeneous descriptions of the textual units\footnote{In this work we focus on words. As such, the rest of this dissertation deals with the representation of words.} adapted to solve NLP tasks. We present this contribution in Chapter \ref{chap:ling_net}, particularly in section \ref{sec:enriched_hypergraph}.
 
 
 \paragraph{Contribution}
@@ -92,16 +92,6 @@ We use the proposed model as the starting point of our other two contributions: 
 
 Lastly, as a proof of concept and in order to test the implementation practicality of our model, we process the English Wikipedia corpus and store its heterogeneous features under the form of the proposed model. We particularly focus onto the lexical and syntactical characteristics of words.
 
-\subsection{Leveraging the network to find semantic relatedness}
-\paragraph{Challenge}
-Leveraging the structure within the proposed linguistic network is one of our main reasons to build such a graph-based language resource. This structure, namely the features linking words  together, originate groups or communities of related words within the network. In that sense, leveraging these latent communities is still today an open question in the domain of graph-based NLP. Particularly in the context of semantic NLP tasks, where determining the relation among words is of utmost importance, we rise the following questions: \textbf{what kind of communities exist within language networks?} \textbf{How can we find and employ them to solve NLP tasks?} Furthermore, assuming an heterogeneous network like the one we propose, \textbf{what are the quantitative and qualitative differences, both in terms of performance and results, between the different representations existing within the network?} Determining the structure inside a language network, as well as devising an algorithm to exploit it would allow us to better understand the role of communities in  graph-based approaches for NLP. Finally, getting a glimpse of the differences between each heterogeneous feature can help us to decide which is the most appropriate according to a NLP system objective. 
-
-
-\paragraph{Contribution}
-Linguistic networks are complex structures that may hold  heterogeneous entities and links together. Properly leveraging these structures has been indeed a popular area of research in the NLP literature. 
-
-We propose a variant to a literature algorithm that solves word sens induction and disambiguation mainly by leveraging  the structure of a language network in. The assumption of the algorithm is that of the network having "real-world" characteristics, broadly, this means that there are several tight-knit groups of words within the structure. Nonetheless, contrary to the existent model, our proposition differs regarding the considerably lower number of parameters by adjusting them automatically according to the statistics of the concerned network. We also allow for more flexibility of the studied contexts of each word. Furthermore, we leverage the structure of our proposed linguistic model and go beyond the classic homogeneous co-occurrences by studying the effect of heterogeneous features on the quality of the senses induced by the system. Our experiments show the interest of our method by improving on the performance of similar methods and by being on the same ballpark of state-of-the-art methods. 
- We  improve the overall performance compared to other similar graph-based techniques.
 
 \subsection{Combining features and dealing with sparsity}
 \paragraph{Challenge}
@@ -119,21 +109,24 @@ Towards addressing both challenges previously described we pose the following qu
 
 
 \paragraph{Contribution}
-%\newpage
+Addressing the sparsity of textual data is not an easy task and often involves complex procedures and loss of information. To alleviate this issue, we propose the application of multimedia analysis fusion techniques to solve NLP semantic tasks. The fusion methods we employ comprise a set of methods to combine (or fuse) different types of features into a single unique representation. While combining attributes we also enrich them by leveraging the complementary information  they carry individually. Furthermore, we address the challenge of data sparsity by transferring unseen relations from one feature space to another, that is, we obtain a denser similarity space by joining together both feature spaces. The experiments we carry out, in word sense induction and disambiguation and named entity recognition, show the pertinence of our approach. Specifically, we try different fusion techniques as well as several fusion configurations to improve the tasks' performance compared with using representations independently. Additionally, we study to what extent each type of fusion employed affects the performance of the tasks we evaluate. This contribution is discussed in the linguistic representation introduced in Chapter \ref{chap:ling_net}, Section \ref{sec:enriched_hypergraph} and in its application in Chapter \ref{chap:wsd},  Section \ref{sec:ner}.
 
 
 
 
 
+\subsection{Leveraging the network to find semantic relatedness}
+\paragraph{Challenge}
+Leveraging the structure within the proposed linguistic network is one of our main reasons to build such a graph-based language resource. This structure, namely the features linking words  together, originate groups or communities of related words within the network. In that sense, leveraging these latent communities is still today an open question in the domain of graph-based NLP. Particularly in the context of semantic NLP tasks, where determining the relation among words is of utmost importance, we rise the following questions: \textbf{what kind of communities exist within language networks?} \textbf{How can we find and employ them to solve NLP tasks?} Furthermore, assuming an heterogeneous network like the one we propose, \textbf{what are the quantitative and qualitative differences, both in terms of performance and results, between the different representations existing within the network?} Determining the structure inside a language network, as well as devising an algorithm to exploit it would allow us to better understand the role of communities in  graph-based approaches for NLP. Finally, getting a glimpse of the differences between each heterogeneous feature can help us to decide which is the most appropriate according to a NLP system objective. 
 
 
+\paragraph{Contribution}
+Linguistic networks are complex structures that may hold  heterogeneous entities and links together. Properly leveraging these structures has been indeed a popular area of research in the NLP literature. 
 
-
-
-
-
-%\section{Contributions}
-Addressing the sparsity of textual data is not an easy task and often involves complex procedures and loss of information. To alleviate this issue, we propose the application of multimedia analysis fusion techniques to solve NLP semantic tasks. The fusion methods we employ comprise a set of methods to combine (or fuse) different types of features into a single unique representation. While combining attributes we also enrich them by leveraging the complementary information  they carry individually. Furthermore, we address the challenge of data sparsity by transferring unseen relations from one feature space to another, that is, we obtain a denser similarity space by joining together both feature spaces. The experiments we carry out, in word sense induction and disambiguation and named entity recognition, show the pertinence of our approach. Specifically, we try different fusion techniques as well as several fusion configurations to improve the tasks' performance compared with using representations independently. Additionally, we study to what extent each type of fusion employed affects the performance of the tasks we evaluate.
+We propose a variant to a literature algorithm that solves word sens induction and disambiguation mainly by leveraging  the structure of a language network in. The assumption of the algorithm is that of the network having "real-world" characteristics, broadly, this means that there are several tight-knit groups of words within the structure. Nonetheless, contrary to the existent model, our proposition differs regarding the considerably lower number of parameters by adjusting them automatically according to the statistics of the concerned network. We also allow for more flexibility of the studied contexts of each word. Furthermore, we leverage the structure of our proposed linguistic model and go beyond the classic homogeneous co-occurrences by studying the effect of heterogeneous features on the quality of the senses induced by the system. Our experiments show the interest of our method by improving on the performance of similar methods and by being on the same ballpark of state-of-the-art methods. 
+ We  improve the overall performance compared to other similar graph-based techniques. 
+ 
+ This contribution is presented as an application, to solve word sense disambiguation, in Chapter \ref{chap:wsd}, section \ref{sec:wsd_wsi}.
 
 
 
