--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -231,11 +231,11 @@ urlcolor=linkcol %couleur des liens pour les url
 {\newpage\vspace*{\fill}\thispagestyle{empty}\renewcommand{\headrulewidth}{0pt}}
 {\vspace*{\fill}}
 % % % % % % % % % % % % % % % % % % %DEFINITIONS MINE
-\newcommand\mlex{M^{\scriptscriptstyle LEX}}
-\newcommand\msyn{M^{\scriptscriptstyle SYN}}
-\newcommand\mstd{M^{\scriptscriptstyle STD}}
-\newcommand\slex{S^{\scriptscriptstyle LEX}}
-\newcommand\ssyn{S^{\scriptscriptstyle SYN}}
-\newcommand\sstd{S^{\scriptscriptstyle STD}}
+\newcommand\mlex{M^{\scriptscriptstyle L}}
+\newcommand\msyn{M^{\scriptscriptstyle S}}
+\newcommand\mstd{M^{\scriptscriptstyle T}}
+\newcommand\slex{S^{\scriptscriptstyle L}}
+\newcommand\ssyn{S^{\scriptscriptstyle S}}
+\newcommand\sstd{S^{\scriptscriptstyle T}}
 
 \newenvironment{abstractchap}{\itshape \paragraph{Abstract.}}{}
